Bug 403854 - Timeline doesn't highlight current frame when loading document
Summary: Timeline doesn't highlight current frame when loading document
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 4.1.7
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-02 11:28 UTC by Jasper
Modified: 2020-05-08 18:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jasper 2019-02-02 11:28:20 UTC
SUMMARY
When a animation is loaded the last active frame is selected but not highlighted in the timeline.

STEPS TO REPRODUCE
1. Set Krita's workspace to Animation.
2. Create a new document.
3. Create a animation with 5 frames.
4. Select the 3th frame.
5. Draw something on the 3th frame.
6. Save your animation.
7. Close Krita, not only your document.
8. Open Krita.
9. Open your animation. 

OBSERVED RESULT
When you open your animation the first frame in the timeline is highlighted but the 3th frame is active. 

EXPECTED RESULT
The 3th frame in the timeline is highlighted and active.

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Tested on 4.1.7 and from source (#2400a82)
Comment 1 mvowada 2019-02-06 08:29:23 UTC
Thanks.
Yes, easily reproducible here (tested with krita 4.2.0-pre-alpha (git 86c58a3 appimage on Ubuntu 14.04).
Comment 2 Eoin O'Neill 2020-05-07 21:38:15 UTC
Git commit 9d6a9446f6cef4ace8628d113c4b4db3393000fc by Eoin O'Neill.
Committed on 07/05/2020 at 21:02.
Pushed by eoinoneill into branch 'master'.

Timeline now correctly  highlights current frame after loading document.

M  +5    -7    plugins/dockers/animation/kis_time_based_item_model.cpp
M  +3    -1    plugins/dockers/animation/kis_time_based_item_model.h
M  +1    -0    plugins/dockers/animation/timeline_frames_model.cpp

https://invent.kde.org/kde/krita/commit/9d6a9446f6cef4ace8628d113c4b4db3393000fc
Comment 3 Eoin O'Neill 2020-05-08 18:48:55 UTC
Git commit a0404a1906c87c02f4b7f78cf4e4e5907dad18fa by Eoin O'Neill.
Committed on 08/05/2020 at 18:48.
Pushed by eoinoneill into branch 'krita/4.3'.

Timeline now correctly  highlights current frame after loading document.
(cherry-picked from commit 9d6a9446f6cef4ace8628d113c4b4db3393000fc)

M  +5    -7    plugins/dockers/animation/kis_time_based_item_model.cpp
M  +3    -1    plugins/dockers/animation/kis_time_based_item_model.h
M  +1    -0    plugins/dockers/animation/timeline_frames_model.cpp

https://invent.kde.org/kde/krita/commit/a0404a1906c87c02f4b7f78cf4e4e5907dad18fa