Timeline now correctly  highlights current frame after loading document.

BUG:403854
(cherry-picked from commit 9d6a9446f6cef4ace8628d113c4b4db3393000fc)